Add Bug Bounty Contract

--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -9,6 +9,11 @@ requirements = []
 path = 'contracts/ad-network_.clar'
 clarity_version = 2
 epoch = 2.5
+
+[contracts.bug-bounty]
+path = 'contracts/bug-bounty.clar'
+clarity_version = 2
+epoch = 2.5
 [repl.analysis]
 passes = ['check_checker']
 
