Add Big Bounty Test

--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -14,6 +14,11 @@ epoch = 2.5
 path = 'contracts/bug-bounty.clar'
 clarity_version = 2
 epoch = 2.5
+
+[contracts.decentralized-charity]
+path = 'contracts/decentralized-charity.clar'
+clarity_version = 2
+epoch = 2.5
 [repl.analysis]
 passes = ['check_checker']
 
