Add Peer Review System Contract

--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -19,6 +19,11 @@ epoch = 2.5
 path = 'contracts/decentralized-charity.clar'
 clarity_version = 2
 epoch = 2.5
+
+[contracts.peer-review]
+path = 'contracts/peer-review.clar'
+clarity_version = 2
+epoch = 2.5
 [repl.analysis]
 passes = ['check_checker']
 
